[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
backoff = { version = "0.4.0", features = ["tokio"] }
borsh = "1.5.3"
bs58 = "0.5.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.9"
log = "0.4.22"
maplit = "1.0.2"
serde_json = "1.0.134"
solana-sdk = "2.1.7"
solana-transaction-status = "2.1.7"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "fs", "macros"] }
tonic = "0.12.3"
yellowstone-grpc-client = "4.1.0"
yellowstone-grpc-proto = { version = "4.1.1", features = ['plugin'] }
